--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 sharedassets1.assets filter=lfs diff=lfs merge=lfs -text
+*.js linguist-language=unity
+*.css linguist-language=unity
+*.html linguist-language=unity
