--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
-*.js linguist-language=unity
+*.exe linguist-language=unity
 
-*.css linguist-language=unity
+*.assets linguist-language=unity
 
-*.html linguist-language=unity
+*.resource linguist-language=unity
 
 sharedassets1.assets filter=lfs diff=lfs merge=lfs -text
