--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
-*.net linguist-language=unity
+*.asp linguist-language=unity
 
-*.assets linguist-language=unity
+*.js linguist-language=unity
 
-*.resource linguist-language=unity
+*.html linguist-language=unity
 
 sharedassets1.assets filter=lfs diff=lfs merge=lfs -text
